--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ imblearn==0.0
 keras==2.9.0
 matplotlib==3.5.1
 numpy==1.21.5
-pandas==1.4.2
+pandas
 scikit_learn==1.1.1
 seaborn==0.11.2
 setuptools==58.1.0
