--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-imblearn==0.0
-keras==2.9.0
-matplotlib==3.5.1
-numpy==1.21.5
+imblearn
+keras
+matplotlib
+numpy
 pandas
-scikit_learn==1.1.1
-seaborn==0.11.2
-setuptools==58.1.0
-tensorflow==2.9.1
-xgboost==1.6.1
+scikit_learn
+seaborn
+setuptools
+tensorflow
+xgboost
